# freebaseballsim

./: INSTALL  README
data/mysql/: backup_schema.sh  names.mysql  schema.mysql  sp_select_stat_skill_hitter_league.mysql  sp_select_stat_skill_pitcher_league.mysql  t_boxscore.mysql  t_user.mysql  test_league.mysql
data/sqlite/: delete_all_players.sqlite  insert_names.sqlite  insert_test_league.sqlite  t_boxscore.sqlite  t_draft.sqlite  t_draft_pref.sqlite  t_hand.sqlite  t_league.sqlite  t_lineup.sqlite  t_name.sqlite  t_player.sqlite  t_player_status.sqlite  t_rotation.sqlite  t_schedule.sqlite  t_skill_fielder.sqlite  t_skill_hitter.sqlite  t_skill_pitcher.sqlite  t_stat_fielder.sqlite  t_stat_hitter.sqlite  t_stat_pitcher.sqlite  t_team.sqlite  t_user.sqlite
doc/: game_log.txt
src/: Data_Interface.pm  Defense_Stat.pm  FBS-config.sh  FBS-config.sh.in  FBS_Config.pm.in  Hitter_Stat.pm  Player.pm  baseball_constants.h  baseball_data.c  baseball_data.h  baseball_macros.h  baseball_objects.c  baseball_objects.h  compiler_macros.h  configure.ac  create_player.c  data_access.c  date.c  date.h  db_object.c  db_object.h  draft_pref.c  draft_pref.h  fbs_argp.c  fbs_argp.h  game_log.pl  generate_schedule.c  goals.pl  hash.c  hash.h  init_mysql.sh  init_sqlite.sh  key_value.c  key_value.h  linked_list.c  linked_list.h  linked_list_test.c  makefile.in  mysql_data.c  mysql_data.h  (+25 more)
src/gtk/: gtk.c  gtk_util.c  gtk_util.h  makefile.in  pages.h  roster_page.c  setup_page.c  simulate_page.c  standings_page.c  stats_page.c
test/: benchmark.1  benchmark.1.err  benchmark.10  benchmark.10.err  benchmark.ltrace  box_test.bx  release.sh
web/: Baseball.pm  Fbs_utils.pm  Links.pm  game.pl  hitter_stats.pl  lineup.pl  lineup.tests  login.pl  logout.pl  pitcher_stats.pl  schedule.pl  select_team.pl  signup.pl  signup.test  standings.pl  style.css  welcome.pl
